<resources>
    <string name="app_name">Brother Barbershop</string>
    <string name="nane">Brother\'s Barber Shop</string>
    <string name="village">Arrving at Koproli</string>
    <string name="about">10 Years Of Experience Barbers<br />Brothers Barber Shop first opened our doors in June of 2018 and has quickly become a staple in koproli, Uran.
         We offer a classic barber shop experience while providing a broad range of classic and modern barber services. If you are looking for a great classic cut, a clean fade,
         or the best shave in Village, we got you covered. For the ladies, Brother’s is proud to be the home of some great stylists who are not only known for great cuts,
        but some of the best color jobs in the area</string>
    <string name="admin">Hello guys, I am Vinod from Chirner. I am senior art director and founder of The Barber Shop Company.</string>
    <string name="barber">Hello guys, I am Suraj from Chirner. I am barber of the Barber Shop Market.</string>
    <string name="tattoo">Hello guys, I am Sanman from Chirner. I am tattoo artist of the Barber Shop Market</string>
    <string name="shop">with brother haircut responcive landing page is website you can appointment with brother haircut barber shop</string>
    <string name="action_settings">Settings</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_registered">Not Registered...?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered...?</string>
    <string name="welcome_user">Welcome User</string>
    <string name="appoint_here">Appointment Now</string>
    <string name="welcome">WELCOME TO THE OUR SHOP</string>
    <string name="unique_story">Unique Story</string>
    <string name="admin_login">Admin Login</string>
    <string name="cancel">Cancel</string>
</resources>
