<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgadmin"
    android:orientation="vertical"
    tools:context=".AdminActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="85dp"
        android:layout_height="110dp"
        android:layout_marginStart="140dp"
        app:srcCompat="@drawable/admin"
        android:contentDescription="TODO" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/admin_login"
        android:textAlignment="center"
        android:textColor="#303F9F"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColorHighlight="#00D10909"
        android:textColorLink="#303F9F" />

    <EditText
        android:id="@+id/password"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <RelativeLayout
        android:layout_width="400sp"
        android:layout_height="150sp">

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="96dp"
            android:layout_height="43dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="80sp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="109dp"
            android:background="@drawable/custom_button"
            android:text="@string/login" />

        <Button
            android:id="@+id/homebtn"
            android:layout_width="97dp"
            android:layout_height="41dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button"
            android:text="@string/cancel"/>


    </RelativeLayout>

</LinearLayout>