<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgabout"
    android:orientation="vertical"
    tools:context=".AboutActivity">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:layout_marginTop="20sp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#F50666"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unique_story"
        android:textAlignment="center"
        android:textColor="#E040FB"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginStart="50sp"
        android:text="@string/about"
        android:textColor="#FFFDFD"
        android:textSize="18sp" />
</LinearLayout>