<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgbarber"
    android:orientation="vertical"
    tools:context=".BarbersActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60sp"
        android:text="Our Team"
        android:textAlignment="center"
        android:textColor="#F3EFEF"
        android:textSize="50sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="555dp">

        <ImageView
            android:id="@+id/owner"
            android:layout_width="152dp"
            android:layout_height="164dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="242dp"
            android:layout_marginBottom="386dp"
            app:srcCompat="@drawable/barber_team_01" />

        <ImageView
            android:id="@+id/tattooartist"
            android:layout_width="152dp"
            android:layout_height="164dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="242dp"
            android:layout_marginBottom="65dp"
            app:srcCompat="@drawable/barber_team_03" />

        <ImageView
            android:id="@+id/barber"
            android:layout_width="152dp"
            android:layout_height="164dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="242dp"
            android:layout_marginBottom="226dp"
            app:srcCompat="@drawable/barber_team_02" />

        <TextView
            android:layout_width="142dp"
            android:layout_height="75dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="65dp"
            android:text="Mr.Vinod Thakur/ Founder"
            android:textColor="#F1E8E8"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="137dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="173dp"
            android:layout_marginEnd="71dp"
            android:text="Mr.Suraj Thakur/ Barber"
            android:textColor="#F1E8E8"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="142dp"
            android:layout_height="75dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="332dp"
            android:layout_marginEnd="66dp"
            android:text="Mr.Sanman Thakur/ Tattoo artist"
            android:textColor="#F1E8E8"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="149dp"
            android:layout_height="64dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="91dp"
            android:layout_marginEnd="61dp"
            android:text="@string/admin"
            android:textColor="#F1E8E8"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="149dp"
            android:layout_height="64dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="247dp"
            android:layout_marginEnd="60dp"
            android:text="@string/barber"
            android:textColor="#F1E8E8"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="149dp"
            android:layout_height="64dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="410dp"
            android:layout_marginEnd="64dp"
            android:text="@string/tattoo"
            android:textColor="#F1E8E8"
            android:textSize="12sp" />
    </RelativeLayout>




</LinearLayout>